// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Select Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={false}
    onClick={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="white"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "hasSearch" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "multiSelect" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "shortcutsEnabled" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed all props 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    isMenu={true}
    isOpen={false}
    position="top"
  >
    <div
      id="searchInput"
    >
      <Search
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </div>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed only required props 1`] = `
<ForwardRef
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    fullWidth={false}
    hasIconOnly={false}
    isSelect={true}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "title": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    loading={false}
    onClick={[Function]}
    selectPosition="bottom"
    size="medium"
    type="secondary"
  />
  <ForwardRef
    isMenu={false}
    isOpen={false}
    position="bottom"
  >
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
    isSplit={false}
    position="bottom"
  />
</ForwardRef>
`;
